# geodata-anchor

./: .gitignore  Cargo.toml  README.md
examples/: schema.rs
schema/: details_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
scripts/: local_deploy.sh  optimize.sh  run_local_node.sh
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: dev.rs  integration.rs
