[package]
name = "geodata-anchor"
version = "0.13.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.13.0" }
cw2 = { version = "0.13.0" }
cosmwasm-std = { version = "1.0.0-beta6" }
cw-storage-plus = { version = "0.13.0" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
