[package]
name = "geodata-anchor"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.13" }
cw2 = { version = "0.13" }
cosmwasm-std = { version = "1.0.0-beta7" }
cw-storage-plus = { version = "0.13" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta7" }
cosmrs = { version = "0.5", features = ["cosmwasm", "rpc"] }
tendermint = { version = "=0.23" }
prost = "0.10"
prost-types = "0.10"
tendermint-rpc = { version = "=0.23", features = ["http-client"] }
tokio = { version = "1"}
tracing = "0.1"
