[package]
name = "geodata-anchor"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.13" }
cw2 = { version = "0.13" }
cosmwasm-std = { version = "1.0.0-beta8" }
cw-storage-plus = { version = "0.13" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
cosmrs = { version = "0.5", features = ["cosmwasm", "rpc", "bip32"] }
cosmos-sdk-proto = { version = "0.10", features = ["grpc"] }
tendermint = { version = "=0.23" }
prost = "0.9"
prost-types = "0.9"
tendermint-rpc = { version = "=0.23", features = ["http-client"] }
tokio = { version = "1"}
bson = { version = "2.1.0", features = ["serde_with", "chrono-0_4"] }
chrono = "0.4"
serde_json = "1.0"
tiny-bip39 = "0.8.2"
bip32 = "0.3.0"
tonic = { version = "0.6", features = ["tls"] }
tracing = "0.1"
tracing-subscriber = "0.2.19"
test-env-log = { version = "0.2.7", features = ["trace"] }
env_logger="0.9.0"